--- a/content/_index.html
+++ b/content/_index.html
@@ -1,7 +1,7 @@
 ---
 title: >
-  Accueil
-breadcrumb_title: "Accueil"
+  Bienvenue sur Liwi
+breadcrumb_title: "Bienvenue sur Liwi"
 url: "/"
 position: 1
 full_width: true
