[Communication::Website::Page::Person] Save Équipe

--- a/content/fr/_index.html
+++ b/content/fr/_index.html
@@ -3,8 +3,15 @@ title: >
   Bienvenue sur Liwi
 breadcrumb_title: "Bienvenue sur Liwi"
 url: "/"
-position: 1
+
 full_width: true
+design:
+  full_width: true
+  toc:
+    present: false
+    offcanvas: true
+
+position: 1
 bodyclass: 
 
 children:
@@ -12,10 +19,19 @@ children:
   - /plan-du-site/
   - /politique-de-confidentialite/
   - /accessibilite/
+  - /actualites/
+  - /equipe/
+  - /organisations/
+meta_description: >
+  
 description: >
+  
+
+summary: >
   
 description_short: >
   
+
 header_text: >-
   
 legacy_text: >
