[Communication::Website] Save Liwi

--- a/content/fr/pages/plan-du-site/_index.html
+++ b/content/fr/pages/plan-du-site/_index.html
@@ -3,14 +3,29 @@ title: >
   Plan du site
 breadcrumb_title: "Plan du site"
 url: "/plan-du-site/"
-position: 2
+slug: "plan-du-site"
+
 full_width: false
+design:
+  full_width: false
+  toc:
+    present: false
+    offcanvas: false
+
+layout: sitemap
+position: 2
 bodyclass: 
 
+meta_description: >
+  
 description: >
+  
+
+summary: >
   
 description_short: >
   
+
 header_text: >-
   
 legacy_text: >
